# bankruptsy_in_poland_binary_classification

./: README.md  pyproject.toml
models/: dtc_classifier.joblib  xgb_best_model.joblib
notebooks/: main.ipynb
references/: data_dictionary.md  dataset_describtion.md
