[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bankruptsy_in_poland"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Mohamed Mohsen" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.14.0"


[tool.ruff]
line-length = 99
src = ["bankruptsy_in_poland"]
include = ["pyproject.toml", "bankruptsy_in_poland/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["bankruptsy_in_poland"]
force-sort-within-sections = true

